--- a/app/src/main/res/layout/fragment_edit_player_player_.xml
+++ b/app/src/main/res/layout/fragment_edit_player_player_.xml
@@ -6,11 +6,10 @@
     <data>
         <import type="android.view.View" />
     </data>
-
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:orientation="vertical">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -50,12 +49,8 @@
     <LinearLayout
         android:layout_margin="10dp"
         android:orientation="vertical"
-       app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="0dp"
-        android:layout_height="0dp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
  <TextView
      android:drawableStart="@drawable/ic_baseline_account_box_24_blue"
      android:text=" Age"
@@ -127,5 +122,5 @@
 
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
 </layout>
