--- a/app/src/main/res/layout/fragment_profile_my_team.xml
+++ b/app/src/main/res/layout/fragment_profile_my_team.xml
@@ -7,7 +7,7 @@
         <import type="android.view.View" />
 
     </data>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout android:orientation="vertical"
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -43,20 +43,15 @@
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
- <ScrollView
-     android:layout_width="match_parent"
-     android:layout_height="match_parent" >
+
     <androidx.cardview.widget.CardView
         android:layout_width ="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
         app:cardCornerRadius="20dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/inforReview"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -135,7 +130,6 @@
                     </TextView>
 
                     <TextView
-
                         android:gravity="center_horizontal"
                         android:text="9.8"
                         android:layout_width="70dp"
@@ -146,225 +140,28 @@
                 </LinearLayout>
 
             </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/lblInfor"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/inforBasic"
-                app:layout_constraintLeft_toLeftOf="parent"
-                >
-                <TextView
-                    android:textColor="@color/colorTittle"
-                    android:layout_marginLeft="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Basic information"
-                    android:textSize="20dp"
-                    android:textStyle="bold"
-                    >
-                </TextView>
-            </LinearLayout>
-
-            <LinearLayout
-                app:layout_constraintTop_toBottomOf="@id/lblInfor"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:id="@+id/listGridData"
-                >
-
-                <LinearLayout
-
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <androidx.cardview.widget.CardView
-                        android:layout_margin="10dp"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        app:cardCornerRadius="10dp"
-                        >
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-                            <TextView
-                                android:layout_margin="10dp"
-                                android:gravity="center"
-                                android:layout_width="match_parent"
-                                android:layout_height="30dp"
-                                android:text="Matched">
-                            </TextView>
-                            <TextView
-                                android:textStyle="bold"
-                                android:layout_margin="10dp"
-                                android:gravity="center"
-                                android:layout_width="match_parent"
-                                android:layout_height="30dp"
-                                android:text="20">
-                            </TextView>
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
-                    <androidx.cardview.widget.CardView
-                        android:layout_margin="10dp"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        app:cardCornerRadius="10dp"
-                        >
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-                            <TextView
-                                android:layout_margin="10dp"
-                                android:gravity="center"
-                                android:layout_width="match_parent"
-                                android:layout_height="30dp"
-                                android:text="Playes">
-                            </TextView>
-                            <TextView
-                                android:textStyle="bold"
-                                android:layout_margin="10dp"
-                                android:gravity="center"
-                                android:layout_width="match_parent"
-                                android:layout_height="30dp"
-                                android:text="17">
-                            </TextView>
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
-                    <androidx.cardview.widget.CardView
-                        android:layout_margin="10dp"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        app:cardCornerRadius="10dp"
-                        >
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-                            <TextView
-                                android:layout_margin="10dp"
-                                android:gravity="center"
-                                android:layout_width="match_parent"
-                                android:layout_height="30dp"
-                                android:text="Different">
-                            </TextView>
-                            <TextView
-                                android:textStyle="bold"
-                                android:layout_margin="10dp"
-                                android:gravity="center"
-                                android:layout_width="match_parent"
-                                android:layout_height="30dp"
-                                android:text="58">
-                            </TextView>
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
-                </LinearLayout>
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:id="@+id/gridRow1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/weight"
-                        android:layout_margin="10dp"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        app:cardCornerRadius="10dp"
-                        >
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-                            <TextView
-                                android:layout_margin="10dp"
-                                android:gravity="center"
-                                android:layout_width="match_parent"
-                                android:layout_height="30dp"
-                                android:text="Win">
-                            </TextView>
-                            <TextView
-                                android:textStyle="bold"
-                                android:layout_margin="10dp"
-                                android:gravity="center"
-                                android:layout_width="match_parent"
-                                android:layout_height="30dp"
-                                android:text="10">
-                            </TextView>
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/height"
-                        android:layout_margin="10dp"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        app:cardCornerRadius="10dp"
-                        >
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-                            <TextView
-                                android:layout_margin="10dp"
-                                android:gravity="center"
-                                android:layout_width="match_parent"
-                                android:layout_height="30dp"
-                                android:text="Drawn">
-                            </TextView>
-                            <TextView
-                                android:textStyle="bold"
-                                android:layout_margin="10dp"
-                                android:gravity="center"
-                                android:layout_width="match_parent"
-                                android:layout_height="30dp"
-                                android:text="4">
-                            </TextView>
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/agePlayer"
-                        android:layout_margin="10dp"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        app:cardCornerRadius="10dp"
-                        >
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-                            <TextView
-                                android:layout_margin="10dp"
-                                android:gravity="center"
-                                android:layout_width="match_parent"
-                                android:layout_height="30dp"
-                                android:text="Lose">
-                            </TextView>
-                            <TextView
-                                android:textStyle="bold"
-                                android:layout_margin="10dp"
-                                android:gravity="center"
-                                android:layout_width="match_parent"
-                                android:layout_height="30dp"
-                                android:text="3">
-                            </TextView>
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
-                </LinearLayout>
-            </LinearLayout>
-            <LinearLayout
-                android:orientation="vertical"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/listGridData"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
- </ScrollView>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"  >
+        <com.google.android.material.tabs.TabLayout
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/tablayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+        <!--    adapter dau-->
+
+        <androidx.viewpager.widget.ViewPager
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:id="@+id/viewpager"
+            android:layout_width="match_parent"
+            app:layout_constraintTop_toBottomOf="@+id/tablayout"
+
+            android:layout_height="0dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </layout>
