--- a/app/src/main/res/layout/item_time_horizontal.xml
+++ b/app/src/main/res/layout/item_time_horizontal.xml
@@ -11,42 +11,29 @@
     </data>
 <androidx.cardview.widget.CardView
     android:id="@+id/cardView"
-    android:layout_width="120dp"
-    android:layout_height="100dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     app:contentPadding="10dp"
     android:layout_margin="5dp"
     app:cardCornerRadius="10dp"
    >
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:gravity="center"
-            android:textStyle="bold"
-           app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/namePlayer"
-            android:id="@+id/txtTime"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:text="19h30 -20h20"
-            />
-        <TextView
-            android:gravity="center"
-            android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@+id/txtTime"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:id="@+id/namePlayer"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:text="600,000 VND"
-            />
+  <LinearLayout
+      android:orientation="horizontal"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
+      <TextView
+          android:textSize="25dp"
+          android:layout_weight="1"
+          android:text="19h30-20h30"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"></TextView>
+      <TextView
+          android:textSize="20dp"
+          android:text="600,000 VND"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"></TextView>
+  </LinearLayout>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
 </layout>
