--- a/app/src/main/res/layout/fragment_list_my_team.xml
+++ b/app/src/main/res/layout/fragment_list_my_team.xml
@@ -52,6 +52,7 @@
 
                 </LinearLayout>
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/btnCreateTeam"
                     android:src="@drawable/ic_add_white_24"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
