--- a/app/src/main/res/layout/fragment_list_time.xml
+++ b/app/src/main/res/layout/fragment_list_time.xml
@@ -10,6 +10,7 @@
             type="com.example.myclub.viewModel.ViewModelTodo" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
