add option login

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,21 +10,24 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/login_background"
     >
- <LinearLayout
-     android:layout_width="match_parent"
-     android:layout_height="match_parent"
-     android:background="@drawable/login_background"
-     android:orientation="vertical"
-     android:gravity="center"
-     android:padding="5dp">
   <ImageView
-      android:id="@+id/image_user"
+      android:layout_marginTop="100dp"
+      android:id="@+id/logoApp"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
       android:layout_width="150dp"
       android:layout_height="150dp"
       android:src="@drawable/avatar_team" />
 
-
+ <LinearLayout
+     android:id="@+id/loginBasic"
+     android:orientation="vertical"
+     app:layout_constraintTop_toBottomOf="@id/logoApp"
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content">
   <EditText
       android:id="@+id/txtEmail"
       android:layout_width="match_parent"
@@ -56,18 +59,65 @@
       android:textColor="#0c0d0c"
       android:textColorHighlight="#FFFFFF"
       android:textColorHint="#0c0d0c" />
-  <LinearLayout
-      android:gravity="center"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:orientation="horizontal">
 
+ </LinearLayout>
+
+
+ <LinearLayout
+     android:orientation="vertical"
+     app:layout_constraintTop_toBottomOf="@id/loginBasic"
+     app:layout_constraintLeft_toLeftOf="parent"
+     app:layout_constraintRight_toRightOf="parent"
+     android:layout_width="match_parent"
+     android:layout_height="0dp"
+     android:gravity="center"
+     >
+  <Button
+      android:layout_width="250dp"
+      android:layout_height="wrap_content"
+      android:text=" Login with Email"
+      android:id="@+id/btnLoginEmail"
+      android:shadowColor="@android:color/transparent"
+      android:padding="15dp"
+      android:layout_marginRight="10dp"
+      android:layout_marginLeft="10dp"
+      android:layout_marginBottom="10dp"
+      android:layout_marginTop="0dp"
+      android:textColor="#ffffff"
+      android:background="#071112"/>
+  <Button
+      android:layout_width="250dp"
+      android:layout_height="wrap_content"
+      android:text="Login with Phone"
+      android:id="@+id/btnPhone"
+      android:shadowColor="@android:color/transparent"
+      android:padding="15dp"
+      android:layout_marginRight="10dp"
+      android:layout_marginLeft="10dp"
+      android:layout_marginBottom="10dp"
+      android:layout_marginTop="0dp"
+      android:textColor="#ffffff"
+      android:background="#071112"/>
 
   <Button
-      android:layout_width="wrap_content"
+      android:id="@+id/btnFacebook"
+      android:layout_width="250dp"
+      android:layout_height="64dp"
+      android:layout_marginLeft="10dp"
+      android:layout_marginTop="0dp"
+      android:layout_marginRight="10dp"
+      android:layout_marginBottom="10dp"
+      android:background="#071112"
+      android:padding="15dp"
+      android:shadowColor="@android:color/transparent"
+      android:text="Login with Facebook"
+      android:textColor="#ffffff" />
+
+  <Button
+      android:layout_width="250dp"
       android:layout_height="wrap_content"
-      android:text="Log In"
-      android:id="@+id/loginEmail"
+      android:text="Login with Google"
+      android:id="@+id/btnGoogle"
       android:shadowColor="@android:color/transparent"
       android:padding="15dp"
       android:layout_marginRight="10dp"
@@ -79,10 +129,10 @@
 
 
   <Button
-      android:id="@+id/btnOffline"
-      android:layout_width="wrap_content"
+      android:layout_width="250dp"
       android:layout_height="wrap_content"
-      android:text="Offline"
+      android:text="Register"
+      android:id="@+id/btnRegister"
       android:shadowColor="@android:color/transparent"
       android:padding="15dp"
       android:layout_marginRight="10dp"
@@ -90,10 +140,28 @@
       android:layout_marginBottom="10dp"
       android:layout_marginTop="0dp"
       android:textColor="#ffffff"
-      android:background="#47c3d6"/>
- </LinearLayout>
+      android:background="#071112"/>
+
+
+
+
  </LinearLayout>
 
+ <com.tuyenmonkey.mkloader.MKLoader
+     android:id="@+id/loader"
+     android:layout_width="70dp"
+     android:layout_height="70dp"
+     android:visibility="gone"
+     android:layout_centerInParent="true"
+     android:layout_centerHorizontal="true"
+     android:layout_centerVertical="true"
+     android:layout_marginTop="60dp"
+     app:layout_constraintBottom_toBottomOf="parent"
+     app:layout_constraintEnd_toEndOf="parent"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintTop_toTopOf="parent"
+     app:mk_color="#ffffff"
+     app:mk_type="FishSpinner" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
