--- a/app/src/main/res/layout/fragment_profile_myself.xml
+++ b/app/src/main/res/layout/fragment_profile_myself.xml
@@ -29,7 +29,13 @@
                 android:textColor="@color/white"/>
 
 
-
+            <ImageButton
+                android:id="@+id/btnLogout"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingHorizontal="15dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:src="@drawable/ic_baseline_sign_out_24"/>
             <ImageButton
                 android:id="@+id/btnEdit"
                 android:layout_width="wrap_content"
