--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -73,6 +73,7 @@
      android:gravity="center"
      >
   <Button
+      android:drawableStart="@drawable/ic_baseline_email_24_yeallow"
       android:layout_width="250dp"
       android:layout_height="wrap_content"
       android:text=" Login with Email"
@@ -86,6 +87,7 @@
       android:textColor="#ffffff"
       android:background="#071112"/>
   <Button
+      android:drawableStart="@drawable/ic_baseline_phone_24_green"
       android:layout_width="250dp"
       android:layout_height="wrap_content"
       android:text="Login with Phone"
@@ -100,6 +102,7 @@
       android:background="#071112"/>
 
   <Button
+      android:drawableStart="@drawable/facebook"
       android:id="@+id/btnFacebook"
       android:layout_width="250dp"
       android:layout_height="64dp"
@@ -114,6 +117,7 @@
       android:textColor="#ffffff" />
 
   <Button
+      android:drawableStart="@drawable/google"
       android:layout_width="250dp"
       android:layout_height="wrap_content"
       android:text="Login with Google"
@@ -129,6 +133,7 @@
 
 
   <Button
+      android:drawableStart="@drawable/ic_add_white_24"
       android:layout_width="250dp"
       android:layout_height="wrap_content"
       android:text="Register"
