--- a/app/src/main/res/layout/fragment_edit_main_player.xml
+++ b/app/src/main/res/layout/fragment_edit_main_player.xml
@@ -2,9 +2,10 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
     <data>
-        <import type="android.view.View" />
+        <variable
+            name="viewModel"
+            type="com.example.myclub.viewModel.PlayerViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -33,6 +34,7 @@
                     android:text="Edit profile"
                     android:textColor="@color/white"
                     android:textSize="20dp" />
+
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
 
@@ -68,7 +70,6 @@
                             android:textStyle="bold"></TextView>
 
                         <ImageButton
-
                             android:id="@+id/btnEditAvatar"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -76,11 +77,12 @@
                             android:textStyle="bold"></ImageButton>
                     </LinearLayout>
 
-                    <ImageButton
+                    <ImageView
+                        android:id="@+id/imgAvatar"
                         android:layout_width="wrap_content"
                         android:layout_height="400dp"
                         android:background="@drawable/avatar_player"
-                        android:scaleType="fitXY"></ImageButton>
+                        android:scaleType="fitXY"></ImageView>
                 </LinearLayout>
 
                 <LinearLayout
@@ -111,11 +113,12 @@
                             android:textStyle="bold"></ImageButton>
                     </LinearLayout>
 
-                    <ImageButton
+                    <ImageView
+                        android:id="@+id/imgCover"
                         android:layout_width="wrap_content"
                         android:layout_height="400dp"
                         android:background="@drawable/cover_player"
-                        android:scaleType="fitXY"></ImageButton>
+                        android:scaleType="fitXY"></ImageView>
 
                 </LinearLayout>
 
