--- a/app/src/main/res/layout/activity_email_registration.xml
+++ b/app/src/main/res/layout/activity_email_registration.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <import type="android.view.View" />
+
+    </data>
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
      >
@@ -74,22 +80,23 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
+                    android:background="@drawable/ic_baseline_email_24_yeallow"
                     android:layout_width="28dp"
                     android:layout_height="28dp"
                     />
 
                 <EditText
-                    android:id="@+id/email"
-                    android:inputType="textEmailAddress"
+                    android:id="@+id/txtEmail"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    android:layout_marginLeft="12dp"
                     android:background="@null"
-                    android:textStyle="bold"
                     android:hint="Email"
-                    android:textColorHint="@color/white"
+                    android:inputType="textEmailAddress"
                     android:textColor="@color/white"
+                    android:textColorHint="@color/white"
                     android:textSize="16sp"
-                    android:layout_marginLeft="12dp"/>
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
@@ -111,12 +118,13 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
+                    android:background="@drawable/ic_baseline_email_24_yeallow"
                     android:layout_width="28dp"
                     android:layout_height="28dp"
                  />
 
                 <EditText
-                    android:id="@+id/password"
+                    android:id="@+id/txtPassword"
                     android:inputType="textPassword"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
@@ -130,48 +138,7 @@
 
             </LinearLayout>
 
-            <View
-                android:layout_marginRight="40dp"
-                android:layout_marginLeft="40dp"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/white"/>
 
-            <LinearLayout
-                android:layout_marginTop="16dp"
-                android:gravity="center_vertical"
-                android:layout_marginRight="40dp"
-                android:layout_marginLeft="40dp"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    />
-
-                <EditText
-                    android:id="@+id/name"
-                    android:inputType="text"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:background="@null"
-                    android:textStyle="bold"
-                    android:hint="Name"
-                    android:textColorHint="@color/white"
-                    android:textColor="@color/white"
-                    android:textSize="16sp"
-                    android:layout_marginLeft="12dp"/>
-
-            </LinearLayout>
-
-            <View
-                android:layout_marginRight="40dp"
-                android:layout_marginLeft="40dp"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/white"/>
 
 
             <Button
@@ -222,3 +189,4 @@
 
 
 </RelativeLayout>
+</layout>
