--- a/app/src/main/res/layout/activity_home_base.xml
+++ b/app/src/main/res/layout/activity_home_base.xml
@@ -42,7 +42,7 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
                     <ImageView
-                        android:background="@drawable/user"
+                        android:background="@drawable/player_default"
                         android:layout_margin="10dp"
                         android:gravity="center"
                         android:layout_width="100dp"
