--- a/app/src/main/res/layout/fragment_edit_player_basic_.xml
+++ b/app/src/main/res/layout/fragment_edit_player_basic_.xml
@@ -4,8 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
-        <import type="android.view.View" />
-
+        <variable
+            name="viewModel"
+            type="com.example.myclub.viewModel.PlayerViewModel" />
     </data>
     <LinearLayout
         android:layout_width="match_parent"
@@ -60,6 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></TextView>
             <EditText
+                android:id="@+id/txtName"
                 android:text="Chu Thanh Dat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></EditText>
@@ -71,17 +73,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></TextView>
             <EditText
+                android:id="@+id/txtPhone"
                 android:text="0984060798"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></EditText>
             <TextView
                 android:drawableStart="@drawable/ic_baseline_email_24_yeallow"
-                android:text=" Email"
+                android:text="Email"
                 android:textStyle="bold"
                 android:textSize="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></TextView>
             <EditText
+                android:id="@+id/txtEmail"
                 android:text="datchuthanh98@gmail.com"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></EditText>
