--- a/app/src/main/res/layout/loading_layout.xml
+++ b/app/src/main/res/layout/loading_layout.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="200dp"
@@ -11,3 +12,4 @@
         android:src="@drawable/loading"
         tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
